# Parallel_Computing_HW2

./: CMakeLists.txt  build.sh  job_scan_MPI_CUDA1D.sh  job_scan_OpenMP1D.sh  job_scan_OpenMP3D.sh  log_cpu  log_cpu3D  log_cudampi  odeint_example
include/: parscan.cuh  utils.cuh
src/: gpu_odesolver.cu  odeint_example.cpp  parscan.cu  parscan_main.cpp  utils.cu
